console,oauth: Fix positioning/spacing issues

--- a/pkg/webui/components/field/field.styl
+++ b/pkg/webui/components/field/field.styl
@@ -25,13 +25,9 @@
 
     .label
       width: 30%
-      line-height: 2.2
 
     .description, .err, .warn
       margin-left: 30%
-
-    &.radio, &.checkbox
-      margin-bottom: 0
 
 .field
   margin-bottom: $cs.l
@@ -50,8 +46,9 @@
       flex-grow: 0
 
     .label
-      one-liner()
       nudge('down')
+      flex: 1 1
+      display: flex
       font-weight: normal
       order: 2
       padding-left: $cs.xxs
@@ -75,10 +72,8 @@
 
 .label
   display: block
-  margin-bottom: $cs.xs
   width:  100%
   flex-shrink: 0
-  line-height: 1
   user-select: none
 
 .description
